fix: update char-counter styling to use margin for alignment

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 .char-counter {
-  padding-left: 400px;
+  margin-left: auto;
 }
 
 body {
